padding fix so caption text doesn't overlap with slider control arrow, commenting on how captions work

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -301,6 +301,7 @@ body {
 }
 
 .keyplayers .bx-caption span {
+  padding-right: 32px;
   position: absolute;
   top: 50%;
   margin-top: -20%;
